--- a/style.css
+++ b/style.css
@@ -8,33 +8,85 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   background-color: #000;
 }
 
 #wrapper {
-  width: 75%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #000;
+  margin-top: 50px;
+}
+#gameBoard {
+  position: relative;
   width: auto;
   background-color: #000;
-  padding: 50px;
-  margin: auto;
 }
-
+#scoreBoard {
+  position: relative;
+  width: 200px;
+  height: 100px;
+}
+#marker {
+  position: absolute;
+  top: 40;
+  left: 40;
+  width: 20px;
+  height: 20px;
+  background-color: aqua;
+}
 h1 {
   color: #b8860b;
   text-align: center;
   margin-bottom: 20px;
 }
-
 .row {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.brick {
-  background-color: #444;
+.row div {
   width: 20px;
   height: 20px;
-  border: 1px solid #000;
+}
+.brick {
+  background-color: #444;
+  border: 1px solid #aaa;
+}
+.coin {
+  background: url('imgs/coin3.gif');
+  background-size: cover;
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid #555;
+}
+.empty {
+  background-color: #000;
+  border: 1px solid #555;
+}
+#pacman {
+  position: absolute;
+  background: url('imgs/pacman.gif');
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #555;
+}
+
+.rotateLeft {
+  content: '';
+  position: absolute;
+  /* width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%; */
+  /* z-index: -1; */
+  background: url(imgs/pacman.gif) 0 0 repeat;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
